kubernetes/UploadDeployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upload-service
  template:
    metadata:
      labels:
        app: upload-service
    spec:
      containers:
      - name: upload
        image: slzcc/uploadserver:backend-v2
        ports:
        - name: http
          containerPort: 8878
        volumeMounts:
        - name: tmp-date
          mountPath: "/tmp/nginx_upload"
        - name: storage-date
          mountPath: "/storage"
        imagePullPolicy: IfNotPresent
      - name: nginx
        image: slzcc/uploadserver:frontend-v2
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: tmp-date
          mountPath: "/tmp/nginx_upload"
        - name: storage-date
          mountPath: "/mirror"
          #        - name: index
          #          mountPath: "/mirror/_upload/index.html"
          #          subPath: index.html
      volumes:
      - name: tmp-date
        emptyDir: {}
      - name: storage-date
        emptyDir: {}
      - name: index
        configMap:
          name: upload-service-index
          items:
          - key: index.html
            path: index.html
 
---
apiVersion: v1
kind: Service
metadata:
  name: upload-service
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: upload-service
 
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: upload-service
spec:
  rules:
  - host: upload.ops.shileizcc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: upload-service
          servicePort: http
